// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow whitespace between if-else 1`] = `"Condition was false"`;

exports[`Negative if inside div 1`] = `<div />`;

exports[`Negative if inside fragment renders nothing 1`] = `null`;

exports[`Negative if with evaluated condition 1`] = `<div />`;

exports[`Nested if 1`] = `"Both conditions are true"`;

exports[`Nested if-else 1`] = `"1st condition is true but 2nd condition is false"`;

exports[`Positive if inside div 1`] = `
<div>
  Condition is true
</div>
`;

exports[`Positive if inside fragment 1`] = `"Condition is true"`;

exports[`Positive if with evaluated condition 1`] = `"Condition is true"`;

exports[`Simple if-else 1`] = `
<div>
  Condition is false
</div>
`;
